<resources>
    <string name="app_name">FitFluent</string>
    <string name="title_activity_login">Login/Sign up</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="register_text">Falls sie noch kein Konto besitzen erstellen sie dieses hier!</string>
    <string name="register_error">Die Eingaben entsprechen nicht den Anforderungen. Alter, Größe und Gewicht muss als Zahl angegeben werden</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Register_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_bmi">BMI</string>
    <string name="title_food">Food</string>
    <string name="title_exercise">Exercises</string>
    <string name="title_workout">Workout</string>

    <!-- String used for the Food Fragment -->
    <string name="search_for_food">Type the food you are going to eat</string>
    <string name="grams_for_food">Type how many grams you are going to eat</string>
    <string name="button_get_food">Get Food</string>
    <string name="button_subtract_food">Subtract the Calories</string>

    <!-- BMI Calculator -->

    <string name="bmi_male">Male</string>
    <string name="bmi_female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="unit_cm">cm</string>
    <string name="unit_kg">kg</string>
    <string name="unit_kgm2">kg/m²</string>

    <string name="recalculate">Neuberechnung</string>
    <string name="your_age">Dein Alter:</string>
    <string name="normal_bmi_range">Normaler BMI-Range:</string>
    <string name="your_result">Dein Ergebnis:</string>
    <string name="saveData">Speichere Daten</string>
    <string name="suggestion">Vorschlag</string>

    <!-- String fot the Workouts Fragment -->
    <string name="workout_heading">Hier sind ihre Workouts</string>





</resources>